    unmaintained upstream. It might need disabling prior to an upload to
    unstable though, as the debugging screen appearing on start is a bit
    annoying, if one does not want to debug anything. Or alternatively
    making the debugging screen not appear on start. (Closes: #499567)
  * Bump bochs versioned Depends on vgabios to >= 0.7a-1.

 -- Guillem Jover <guillem@debian.org>  Thu, 29 Dec 2011 21:49:06 +0100

bochs (2.4.6-5) unstable; urgency=low

  * Orphan package, set maintainer to Debian QA Group.
  * Fix typo (targeted) in README.Debian, spotted by lintian.
  * Remove sb16ctrl.exe from upstream tarball in debian/tarball.sh.
  * Add missing backslash to escape $ on XPM_LIB variable:
    - debian/patches/link-only-needed-libs.patch
  * Enable support for RFB protocol as GUI frontend (works with VNC viewer).
  * Use dpkg-buildflags to set build flags (enables default hardening flags).
    Based on a patch by Moritz Muehlenhoff <jmm@debian.org>. (Closes: #653511)
  * Fix man page warnings due to unescaped ' at the beginning of line.
  * Reorganize patches:
    - Remove sequence numbers from non-imported patch filenames.
    - Rename non-imported patches to more descriptive names.
    - Split 00_base.patch into a local-config.patch and local-paths.patch.
  * Switch sb16ctrl-bochs to any-i386 instead of explicit arch list.
  * Clarify output on what's being done by debian/tarball.sh.
  * Build bochs-svga on all architectures where svgalib is now available;
    implies switching from i386 and amd64 to linux-any and kfreebsd-any.

 -- Guillem Jover <guillem@debian.org>  Tue, 07 Feb 2012 13:10:17 +0100

bochs (2.4.6-4) unstable; urgency=low

  * Do not install the ne2k plugin on systems were it's not supported.
  * Handler Linux 3.x kernels the same way as 2.6.x. (Closes: #647195)
  * Pack bochsrc.5 man page table to fix a man warning.
  * Remove now unneeded source lintian override on arch wildcards usage.