@@ -1,8 +1,8 @@
 Author: Guillem Jover <guillem@debian.org>
 
 ---
- doc/man/bochsrc.5 |   20 ++++++++++++--------
- 1 file changed, 12 insertions(+), 8 deletions(-)
+ doc/man/bochsrc.5 |   22 +++++++++++++---------
+ 1 file changed, 13 insertions(+), 9 deletions(-)
 
 --- a/doc/man/bochsrc.5
 +++ b/doc/man/bochsrc.5
@@ -18,19 +18,28 @@ Author: Guillem Jover <guillem@debian.org>
 - 2.2.6 2.6Ghz Intel Core 2 Duo with WinXP/g++ 3.4       21 to 25 Mips
 - 2.2.6 2.1Ghz Athlon XP with Linux 2.6/g++ 3.4          12 to 15 Mips
 +.TS
-+tab (@);
++tab(@);
 +l l l.
 +Bochs@Machine/Compiler@Mips
 +_
-+2.4.6@3.4Ghz Intel Core i7 2600 with Win7x64/g++ 4.5.2@85-95 Mips
-+2.3.7@3.2Ghz Intel Core 2 Q9770 with WinXP/g++ 3.4@50-55 Mips
-+2.3.7@2.6Ghz Intel Core 2 Duo with WinXP/g++ 3.4@38-43 Mips
-+2.2.6@2.6Ghz Intel Core 2 Duo with WinXP/g++ 3.4@21-25 Mips
-+2.2.6@2.1Ghz Athlon XP with Linux 2.6/g++ 3.4@12-15 Mips
++2.4.6@3.4Ghz Core i7 2600 w/ Win7x64/g++ 4.5.2@85-95 Mips
++2.3.7@3.2Ghz Core 2 Q9770 w/ WinXP/g++ 3.4@50-55 Mips
++2.3.7@2.6Ghz Core 2 Duo w/ WinXP/g++ 3.4@38-43 Mips
++2.2.6@2.6Ghz Core 2 Duo w/ WinXP/g++ 3.4@21-25 Mips
++2.2.6@2.1Ghz Athlon XP w/ Linux 2.6/g++ 3.4@12-15 Mips
 +.TE
  
   [1]  IPS measurements depend on OS and compiler
  configuration  in addition  to processor clock
+@@ -374,7 +378,7 @@ This defines parameters related to the V
+ extension:
+ 
+ Here you can specify the display extension to be used. With the value
+-'none' you can use standard VGA with no extension. Other supported
++\(aqnone' you can use standard VGA with no extension. Other supported
+ values are 'vbe' for Bochs VBE and 'cirrus' for Cirrus SVGA support.
+ 
+ update_freq:
 @@ -1011,7 +1015,7 @@ Example:
  This option controls the presence of the USB root hub which is a part
  of the i440FX PCI chipset. With the portX option you can connect devices
