@@ -15,6 +15,8 @@ bochs (2.5.1-1) UNRELEASED; urgency=low
     annoying, if one does not want to debug anything. Or alternatively
     making the debugging screen not appear on start. (Closes: #499567)
   * Bump bochs versioned Depends on vgabios to >= 0.7a-1.
+  * Fix man page warnings due to unescaped ' at the beginning of line,
+    and table lines using more than 80 characters.
 
  -- Guillem Jover <guillem@debian.org>  Thu, 29 Dec 2011 21:49:06 +0100
 
